# langur

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  Cargo.toml  Development.md  OLD_README.md  README.md  WORKSPACE
.cargo/: config.toml
.github/workflows/: ci.yml
crates/langur_tokenizer/: BUILD.bazel  Cargo.toml
crates/langur_tokenizer/src/: lib.rs  main.rs  tokenizer.rs
crates/polyglot_tokenizer/: BUILD.bazel
src/: cli.rs  detectors.rs  filters.rs  language.rs  lib.rs  main.rs  tokenizer.rs
src/detectors/: classifier.rs  extensions.rs  filenames.rs  heuristics.rs  interpreters.rs  mod.rs
src/filters/: documentation.rs  vendor.rs
tools/codegen/: BUILD.bazel  Cargo.toml
tools/codegen/data/: deprecated_languages.yml
tools/codegen/src/: lib.rs  main.rs
