load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_binary(
    name = "hyply",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True) + ["//:hyperpolyglot"],
)

rust_library(
    name = "hyperpolyglot",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"], allow_empty = False),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True),
    crate_name = "hyperpolyglot",
    crate_root = "src/lib.rs",
    visibility = ["//visibility:public"],
)
