[package]
name = "hyperpolyglot"
version = "0.1.7"
authors = ["Connor Monks <monkslc@gmail.com>"]
edition = "2018"
default-run = "hyply"
description = "A fast programming language detector"
homepage = "https://github.com/monkslc/hyperpolyglot"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/monkslc/hyperpolyglot"

[dependencies]
clap = "2.33.0"
ignore = "0.4.1"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
phf = { workspace = true }
pcre2 = { workspace = true }
regex = "1.3.5"
termcolor = "1.1.0"
polyglot_tokenizer = { workspace = true }

[[bin]]
name = "hyply"
path = "src/main.rs"

[workspace]
members = [
  # The tokenizer is a separate crate to avoid a dependency cycle.
  # Specifically, the tokenizer code is used by the codegen tools,
  # which produces files used by the hyperpolyglot library.
  #
  # So merging the tokenizer into the hyperpolyglot library would
  # create a cycle.
  "crates/polyglot_tokenizer",
  "tools/codegen",
]

[workspace.dependencies]
pcre2 = "0.2.3"
# Keep the two versions below in sync
phf = "0.11.1"
phf_codegen = "0.11.1"
polyglot_tokenizer = { path = "crates/polyglot_tokenizer" }
