[package]
name = "langur"
version = "0.0.0"
authors = ["Varun Gandhi <varun.gandhi@sourcegraph.com", "Connor Monks <monkslc@gmail.com>"]
edition = "2021"
default-run = "langur"
description = "Programming language detection library and CLI"
homepage = "https://github.com/sourcegraph/langur"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sourcegraph/langur"

[dependencies]
clap = "2.33.0"
ignore = "0.4.1"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
phf = { workspace = true }
pcre2 = { workspace = true }
regex = "1.3.5"
termcolor = "1.1.0"
langur_tokenizer = { workspace = true }

[[bin]]
name = "langur"
path = "src/main.rs"

[workspace]
members = [
  # The tokenizer is a separate crate to avoid a dependency cycle.
  # Specifically, the tokenizer code is used by the codegen tools,
  # which produces files used by the langur library.
  #
  # So merging the tokenizer into the langur library would
  # create a cycle.
  "crates/langur_tokenizer",
  "tools/codegen",
]

[workspace.dependencies]
pcre2 = "0.2.3"
# Keep the two versions below in sync
phf = "0.11.1"
phf_codegen = "0.11.1"
langur_tokenizer = { path = "crates/langur_tokenizer" }
