load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "codegen",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True) + ["//crates/polyglot_tokenizer"],
    data = ["@com_github_linguist//:samples", "@com_github_linguist//:yaml_config", "//:generated"],
    visibility = ["//visibility:public"],
    tags = ["manual"],
)
