[package]
name = "codegen"
version = "0.1.0"
authors = ["Varun Gandhi <varun.gandhi@sourcegraph.com", "Connor Monks <monkslc@gmail.com>"]
edition = "2021"
default-run = "codegen"

[dependencies]
lazy_static = { workspace = true }
pcre2 = { workspace = true }
phf_codegen = { workspace = true }
phf_shared = { workspace = true }
langur_tokenizer = { workspace = true }
serde = { version = "1.0.105", features = ["derive"] }
serde_yaml = "0.8"
regex = { workspace = true }